FontResource: use CHECKs to confirm if crrev.com/2551823002 fixes the issue

This patch is intended to confirm if the previous change can fix the
issue that fires these CHECKs. Once this patch can survive for some
days, I'd change them to DCHECKs. Otherwise, I'd revert this patch, and
find another potential issues.

Please feel free to revert this patch when you notice some crashes
that are caused by this patch.

BUG=670638

Review-Url: https://codereview.chromium.org/2550123002
Cr-Commit-Position: refs/heads/master@{#436257}

Former-commit-id: 32c0cbefcb52226a0ec0765a2156d1c490377ec2